style.scss
/* VARIABLES */

$color-main: #e94218;
$color-light: #fff;
$color-dark: #3d3d3d;
$color-grey: #f0f0f0;

$font-intro: "Barlow", sans-serif;
$font-text: "Baloo 2", sans-serif;

/* GLOBAL */

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: $font-text;
  text-align: center;
  background: $color-light;
  color: $color-dark;
  font-size: 16px;
  line-height: 1.7;
}

section {
  padding: 108px 0;
}

h3 {
  position: relative;
  font-size: 36px;
  margin: 0 0 60px 0;

  &::after {
    position: absolute;
    content: "";
    bottom: -12px;
    left: 50%;
    width: 50px;
    height: 10px;
    transform: translate(-50%);
    background: $color-main;
  }
}

.container {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

/* SPLASH */

.splash {
  position: relative;
  height: 100vh;
  background-image: url("img/splash.jpg");
  background-position: center center;
  background-size: cover;
  background-attachment: fixed;
  z-index: 1;

  &::after {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.74);
  }

  &__inner {
    position: absolute;
    width: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;

    &-icon {
      font-size: 40px;
      background: $color-main;
      width: 60px;
      height: 60px;
      border-radius: 50%;
      color: $color-light;
      padding: 10px 1px 0 0;
    }

    &-title {
      position: relative;
      color: $color-light;
      font-size: 60px;
      margin: 48px 0 0 0;
      letter-spacing: 2px;

      &::after {
        position: absolute;
        content: "";
        bottom: -24px;
        left: 50%;
        width: 10%;
        height: 10px;
        transform: translate(-50%);
        background: $color-main;
      }
    }

    &-subtitle {
      color: $color-light;
      font-family: $font-text;
      font-size: 24px;
      margin: 48px 0 0 0;
      letter-spacing: 3px;
    }
  }
}

/* INTRO */

.intro {
  background: $color-light;

  p {
    width: 70%;
    margin: 0 auto;
    padding: 48px 0;
    font-family: $font-intro;
    font-size: 24px;
    border-top: 1px solid $color-dark;
    border-bottom: 1px solid $color-dark;
    letter-spacing: 1px;
  }
}

/* ABOUT */

.about {
  background: $color-grey;

  &__description {
    font-size: 20px;
  }
}

/* SKILLS */

.skills {
  article {
    position: relative;
  }

  &__image {
    position: absolute;
    width: 50%;
    height: 100%;
    overflow: hidden;

    &-right {
      right: 0;
    }

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      transition: all 1s;

      &:hover {
        transform: scale(1.05);
      }
    }
  }

  &__description {
    padding: 36px 0 26px 55%;
    text-align: left;

    &-right {
      padding: 36px 55% 36px 0;
      text-align: right;
    }
  }
}

/* GALLERY */

.gallery {
  button {
    border: none;
    width: 130px;
    height: 60px;
    background-color: $color-main;
    color: $color-light;
    letter-spacing: 1px;
    font-weight: 600;

    &:hover {
      cursor: pointer;
    }
  }
  &__boxes {
    &::before,
    &::after {
      clear: both;
      content: "";
      display: table;
    }
  }

  &__box {
    position: relative;
    float: left;
    height: 300px;
    width: 33.3333%;
    background-color: $color-grey;
    overflow: hidden;

    &:hover::after {
      position: absolute;
      content: "";
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      background-color: rgba(0, 0, 0, 0.555);
    }

    &-details {
      display: none;
      position: absolute;
      width: 100%;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);

      h4 {
        color: $color-light;
        font-size: 20px;
      }
    }

    img {
      width: 100%;
    }

    &:hover {
      .gallery__box-details {
        display: block;
        z-index: 3;
      }
    }
  }

  .more {
    margin-top: 60px;
  }
}

